syntax = "proto3";

package com.roje.bombak.gate.proto;


message LoginRequest {
    int64 uid = 1;
    string token = 2;
}

message LoginResponse {
}

message HeartBeatRequest {

}

message HeartBeatResponse {
    int64 time = 1;
}
